<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainmenubackground"
    tools:context="com.project.library.MainMenuActivity">

    <Button
        android:id="@+id/buttonToNearestLibs"
        android:layout_width="262dp"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/sampleshape"
        android:text="@string/nearest_libraries"
        android:textSize="20sp"
        android:theme="@style/CustomBlueButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonToNewestBooks"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonMainPage"
        android:layout_width="262dp"
        android:layout_height="51dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/sampleshape"
        android:text="@string/my_library"
        android:textSize="20sp"
        android:theme="@style/CustomBlueButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/buttonToNewestBooks"
        android:layout_width="262dp"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/sampleshape"
        android:text="@string/see_the_newest_books"
        android:textSize="20sp"
        android:theme="@style/CustomBlueButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMainPage" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="323dp"
        android:layout_height="294dp"
        android:layout_marginTop="92dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mainmenulogo" />

    <Spinner
        android:id="@+id/spinnerLanguage"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.735" />

    <TextView
        android:id="@+id/twLanguage"
        android:layout_width="150dp"
        android:layout_height="31dp"
        android:layout_marginStart="4dp"
        android:text="@string/languageHint"
        app:layout_constraintBottom_toTopOf="@+id/spinnerLanguage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.64" />

</androidx.constraintlayout.widget.ConstraintLayout>