<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.project.library.AddBookActivity">

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="139dp"
            android:layout_height="33dp"
            android:layout_marginTop="36dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/name"
            android:textAlignment="viewEnd"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="235dp"
            android:layout_height="44dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.636"
            app:layout_constraintStart_toEndOf="@+id/textViewName"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewNumberOfPublishedBooks"
            android:layout_width="149dp"
            android:layout_height="29dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="13dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/numberOfPublishedBooks"
            android:textAlignment="textEnd"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/editTextBestSellingBookName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textViewName" />

        <EditText
            android:id="@+id/editTextNumberOfPublishedBooks"
            android:layout_width="235dp"
            android:layout_height="44dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.181"
            app:layout_constraintStart_toEndOf="@+id/textViewNumberOfPublishedBooks"
            app:layout_constraintTop_toBottomOf="@+id/editTextName" />

        <TextView
            android:id="@+id/textViewBestSellingBookName"
            android:layout_width="150dp"
            android:layout_height="25dp"
            android:layout_marginTop="64dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/bestSellingBookName"
            android:textAlignment="viewEnd"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textViewNumberOfPublishedBooks" />

        <EditText
            android:id="@+id/editTextBestSellingBookName"
            android:layout_width="235dp"
            android:layout_height="44dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.142"
            app:layout_constraintStart_toEndOf="@+id/textViewBestSellingBookName"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumberOfPublishedBooks" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="121dp"
            android:layout_height="52dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="112dp"
            android:background="@drawable/sampleshape"
            android:fontFamily="casual"
            android:text="@string/saveAuthor"
            android:textSize="20sp"
            android:theme="@style/CustomBlueButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextBestSellingBookName" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="93dp"
            android:layout_height="52dp"
            android:layout_marginTop="112dp"
            android:layout_marginEnd="64dp"
            android:background="@drawable/sampleshape"
            android:fontFamily="casual"
            android:text="@string/cancel"
            android:textSize="20sp"
            android:theme="@style/CustomBlueButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.818"
            app:layout_constraintStart_toEndOf="@+id/buttonSave"
            app:layout_constraintTop_toBottomOf="@+id/editTextBestSellingBookName" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>